<resources>
    <string name="app_name">WifiHelper</string>

    <string name="label_suport_wifi">1、设备支持WiFi</string>
    <string name="label_needs_wifiPermission">2、申请权限</string>
    <string name="label_Open_GPS">3、开启GPS</string>
    <string name="label_wifi_function">4、WiFi功能</string>

    <string name="show_location_msg">扫描需要定位权限，应用将要申请定位权限</string>
    <string name="show_location_ok">好的</string>
    <string name="show_location_no">不给</string>
    <string name="show_location_denied">拒绝授权！</string>
    <string name="show_location_neverask">不再询问！</string>
    <string name="location_non_suport">设备不支持Wifi！</string>
    <string name="location_non_permission">权限未申请！</string>
    <string name="label_openwifi">打开WiFi</string>
    <string name="label_closewifi">关闭WiFi</string>
    <string name="label_ScanWiFi">扫描WiFi</string>

</resources>
