<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_SuportWiFi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/label_suport_wifi"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cb_SuportWiFi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_SuportWiFi"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/btn_SuportWiFi"
        android:clickable="false"
        android:enabled="false" />

    <Button
        android:id="@+id/btn_Permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_SuportWiFi"
        android:layout_alignStart="@+id/btn_SuportWiFi"
        android:layout_alignEnd="@+id/btn_SuportWiFi"
        android:layout_marginTop="50dp"
        android:text="@string/label_needs_wifiPermission"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cb_Permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_Permissions"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/btn_Permissions"
        android:clickable="false"
        android:enabled="false" />

    <Button
        android:id="@+id/btn_Function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_Permissions"
        android:layout_alignStart="@+id/btn_SuportWiFi"
        android:layout_alignEnd="@+id/btn_SuportWiFi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/label_wifi_function"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</RelativeLayout>